--- a/src/UI/Blazor/Modules/Task/Components/Task.razor
+++ b/src/UI/Blazor/Modules/Task/Components/Task.razor
@@ -211,7 +211,9 @@
         </div>
     </div>
 </div>
-
+@* <CascadingBlazoredModal>
+    <CreateTaskModel></CreateTaskModel>
+</CascadingBlazoredModal> *@
 @code {
 
     [CascadingParameter] public IModalService Modal { get; set; }
