--- a/src/UI/Blazor/App.razor
+++ b/src/UI/Blazor/App.razor
@@ -1,4 +1,5 @@
-﻿@using Starter.Blazor.Layout.Public
+﻿@using Starter.Blazor.Layout.Pagenotfound
+@using Starter.Blazor.Layout.Public
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
@@ -12,9 +13,8 @@
             </AuthorizeRouteView>
         </Found>
         <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
+            <LayoutView Layout="@typeof(AuthLayout)">
+               <PageNotFound></PageNotFound>
             </LayoutView>
         </NotFound>
     </Router>
