Set home URL for not found page

--- a/src/UI/Blazor/Layout/Pagenotfound/PageNotFound.razor
+++ b/src/UI/Blazor/Layout/Pagenotfound/PageNotFound.razor
@@ -17,7 +17,6 @@
       class="relative overflow-x-hidden font-nunito text-sm font-normal antialiased"
       :class="[ $store.app.sidebar ? 'toggle-sidebar' : '', $store.app.theme === 'dark' || $store.app.isDarkMode ?  'dark' : '', $store.app.menu, $store.app.layout,$store.app.rtlClass]">
  
- 
     <div class="main-container min-h-screen text-black dark:text-white-dark">
         <!-- start main content section -->
         <div class="flex min-h-screen items-center justify-center bg-gradient-to-t from-[#c39be3] to-[#f2eafa]">
@@ -25,13 +24,10 @@
                 <h2 class="mb-8 text-[50px] font-bold leading-none md:text-[80px]">Error 404</h2>
                 <h4 class="mb-5 text-xl font-semibold text-primary sm:text-5xl">Ooops!</h4>
                 <p class="text-base">The page you requested was not found!</p>
-                <a href="index.html" class="btn btn-primary mx-auto mt-10 w-max">Home</a>
+                <a href="/" class="btn btn-primary mx-auto mt-10 w-max">Home</a>
             </div>
         </div>
         <!-- end main content section -->
     </div>
-
-
-    
 </body>
 </html>
