--- a/src/UI/Angular/src/app/modules/task/pages/list-tasks/list-tasks.component.html
+++ b/src/UI/Angular/src/app/modules/task/pages/list-tasks/list-tasks.component.html
@@ -89,6 +89,7 @@
 
   <div class="datatable">
     <ng-datatable
+      #listTaskDataTable
       [rows]="rows"
       [columns]="cols"
       [loading]="loading"
