--- a/src/UI/Angular/src/app/modules/user/components/invite-user-modal/invite-user-modal.component.html
+++ b/src/UI/Angular/src/app/modules/user/components/invite-user-modal/invite-user-modal.component.html
@@ -51,7 +51,7 @@
       (click)="resetForm(); modalComponent.close()"
       class="btn btn-outline-danger"
     >
-      Discard
+      {{ userId ? "Cancel" : "Discard" }}
     </button>
     <app-button
       [text]="userId ? 'Save' : 'Invite'"
