--- a/src/UI/Angular/src/app/modules/project/pages/list-projects/list-projects.component.html
+++ b/src/UI/Angular/src/app/modules/project/pages/list-projects/list-projects.component.html
@@ -70,6 +70,7 @@
 
   <div class="datatable">
     <ng-datatable
+      #listProjectDataTable
       [rows]="rows"
       [columns]="cols"
       [loading]="loading"
